# IsoLasso_Parallel

./: .travis.yml  CMakeLists.txt  CMakeLists.txt.in  README.md
Unittest/TestData/: example2_top10000.sam  example2_top10000_RGStats.txt  example_1.sam  example_1_RGStats.txt  example_3_paired.sam  example_3_paired_RGStats.txt  example_4.sam  reads_sort.sam
Unittest/src/: SAMProcess_test.cpp  SAM_IO_test.cpp
lib/include/EM_module/: EMalgorithm.hpp  PredExpLevel.hpp  TreeNodes.hpp
lib/include/SAM_module/: RangeSet.hpp  ReadGroup.hpp  SAMprocess.hpp  SAMrecord.hpp
lib/include/utils/: ArgParser.hpp  Auxiliario.hpp  Commontype.hpp  ThreadPool.hpp
src/: PlotReadGroup.py  main.cpp
src/EM_module/: CMakeLists.txt  EM_algorithm.cpp  EMalgorithm.cpp  PredExpLevel.cpp
src/SAM_module/: CMakeLists.txt  RangeSet.cpp  ReadGroup.cpp  SAMprocess.cpp  SAMrecord.cpp
src/utils/: ArgParser.cpp  Auxiliaryio.cpp  CMakeLists.txt
